--- a/Holiday Tracking Tool/Views/Login/Authentication.cshtml
+++ b/Holiday Tracking Tool/Views/Login/Authentication.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Holiday_Tracking_Tool.Models.Login
 @{
     ViewBag.Title = "Authentication";
     Layout = null;
@@ -30,7 +30,7 @@
                         <input type="checkbox" value="remember-me"> Remember me
                     </label>
                 </div>
-                <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
+                <button id="signin" class="btn btn-lg btn-primary btn-block btn-signin" type="button" onclick="location.href='@Url.Action("Authentication", "Login")'">Sign in</button>
             </form><!-- /form -->
             <a href="#" class="forgot-password">
                 Forgot the password?
